--- a/resume.html
+++ b/resume.html
@@ -36,15 +36,36 @@
         </div>
     </section>
 
-    <section class="block">
-        <h2>PROFESSIONAL EXPERIENCE</h2>
-        <!-- Add similar <div> blocks for each experience -->
+     <section class="block">
+        <h2>PROJECTS</h2>
         <div>
             <h3>Travel Website - Tourism Project</h3>
             <p><strong>Interactive Web Application Developer</strong></p>
-            <!-- Add <p> tags for each bullet point -->
-            <p>Developed an interactive travel website with map-based...</p>
-            <!-- ... -->
+            <ul>
+                <li>Developed an interactive travel website with map-based tour displays, user reviews, and integrated tour booking.</li>
+                <li>Implemented email notifications, JWT authentication, and deployed the application on Heroku.</li>
+                <li>Utilized MongoDB Atlas, Express, and Node.js for the backend, and designed frontend using Pug, HTML, CSS, and JavaScript.</li>
+                <li>Integrated Mapbox API for interactive maps and Stripe API for secure payments.</li>
+            </ul>
+        </div>
+
+        <div>
+            <h3>3D Digital Campus of China University of GeoScience</h3>
+            <p><strong>Lead Developer</strong></p>
+            <ul>
+                <li>Developed a 3D digital campus used by over 5000 students and faculty, involving detailed 3D modeling and web application development.</li>
+                <li>Utilized PostgreSQL for database management, and integrated RESTful APIs for data retrieval.</li>
+                <li>Designed user-friendly interfaces with Bootstrap and Leaflet for interactive mapping and navigation.</li>
+            </ul>
+        </div>
+
+        <div>
+            <h3>Video Sensor Observation Capability 3D Simulation System</h3>
+            <p><strong>Project Leader</strong></p>
+            <ul>
+                <li>Led a team to develop a simulation system, improving toll booth camera viewing range by 50% and reducing costs by 30%.</li>
+                <li>Utilized WebGL for real-time 3D map visualization in a web browser, completing the project within a 2-month timeframe.</li>
+            </ul>
         </div>
     </section>
     
