--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
             <p><strong>Project Leader</strong></p>
             <ul>
                 <li>Led a team to develop a simulation system, improving toll booth camera viewing range by 50% and reducing costs by 30%.</li>
-                <li>Utilized WebGL for real-time 3D map visualization in a web browser, completing the project within a 2-month timeframe.</li>
+                <li>Utilized WebGL and Cesium for real-time 3D map visualization in a web browser, completing the project within a 2-month timeframe.</li>
             </ul>
         </div>
     </section>
