--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <header>
         <h1>ZHE LI</h1>
         <p>101 CookWay, Newark, DE 19711</p>
-        <p>(302) 668-2492 • zli003@my.wilmu.edu</p>
+        <p>(302) 668-2492 • ZheLi0726@outlook.com</p>
     </header>
     
     <section class="block">
